# seo-pipeline

./: .env.example  .gitignore  CASE_STUDY.md  README.md  alembic.ini  mkdocs.yml  pipeline.py  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/workflows/: cron.yml  docs.yml  pipeline-full.yml  pipeline.yml
data/: cluster_labels.yaml  keywords.csv  keywords.manual.csv
docs/: architecture.md  case-study.md  decisions.md  developer-guide.md  example-output.md  index.en.md  index.md  interview-presentation.md  interview-slides.html  interview-slides.md  methodology.md  reporting-integration.md  results.md  technical_review.md
docs/javascripts/: lightbox.js  palette-fix.js
docs/stylesheets/: extra.css
migrations/: env.py
migrations/versions/: 20260421_0001_initial_schema.py
output/briefings/: cluster_01.md  cluster_02.md  cluster_03.md  cluster_04.md  cluster_05.md  cluster_06.md  cluster_07.md  cluster_08.md  cluster_09.md  cluster_10.md  cluster_11.md  cluster_12.md  cluster_13.md  index.html
output/clustering/: umap_2d.npy  (+11 more)
src/: brief.py  briefs_html.py  cluster.py  cluster_viz.py  config.py  discover.py  enrich.py  export.py  labels_llm.py  logging_config.py  report.py  retry.py  subcluster.py  sync_airtable.py  sync_sheets.py
tests/: conftest.py  test_brief_helpers.py  test_briefs_html_helpers.py  test_config.py  test_enrich_helpers.py  test_export_csv.py  test_export_helpers.py  test_redirect_health.py  test_retry.py  test_sitemap_crawl.py  test_smoke.py  test_sync_airtable_helpers.py  test_sync_sheets_helpers.py
(+61 files in other folders)
